--- a/06-custom-component.html
+++ b/06-custom-component.html
@@ -1,20 +1,22 @@
 <body>
-  <div id="root"></div>
-  <script src="https://unpkg.com/react@16.12.0/umd/react.development.js"></script>
-  <script src="https://unpkg.com/react-dom@16.12.0/umd/react-dom.development.js"></script>
-  <script src="https://unpkg.com/@babel/standalone@7.8.3/babel.js"></script>
-  <script type="text/babel">
-    function Message({children}) {
-      return <div className="message">{children}</div>
-    }
+	<div id="root"></div>
+	<script src="https://unpkg.com/react@16.12.0/umd/react.development.js"></script>
+	<script src="https://unpkg.com/react-dom@16.12.0/umd/react-dom.development.js"></script>
+	<script src="https://unpkg.com/@babel/standalone@7.8.3/babel.js"></script>
+	<script type="text/babel">
+		//with this we can create a piece of reusable code as a DOM element
+		//component needs to start with a capital Letter so that that Babel knows to not pass it as a string
+		const Message = props => <div className="message">{children}</div>;
 
-    const element = (
-      <div className="container">
-        <Message>Hello World</Message>
-        <Message>Goodbye World</Message>
-      </div>
-    )
+		const element = (
+			<div className="container">
+				<Message>Hello World</Message>
+				<Message>Goodbye World</Message>
+			</div>
+		);
 
-    ReactDOM.render(element, document.getElementById('root'))
-  </script>
+		ReactDOM.render(element, document.getElementById('root'));
+	</script>
 </body>
+
+<!-- why is this useful though? I need a better example. -->
