--- a/02-react-create-element.html
+++ b/02-react-create-element.html
@@ -1,13 +1,27 @@
 <body>
-  <div id="root"></div>
-  <script src="https://unpkg.com/react@16.12.0/umd/react.development.js"></script>
-  <script src="https://unpkg.com/react-dom@16.12.0/umd/react-dom.development.js"></script>
-  <script type="text/javascript">
-    const rootElement = document.getElementById('root')
-    const element = React.createElement('div', {
-      className: 'container',
-      children: 'Hello World',
-    })
-    ReactDOM.render(element, rootElement)
-  </script>
+	<div id="root"></div>
+
+	<!-- using unpkg to get react instead of npm -- need react and react dom to get (render) those elements on the page -->
+	<script src="https://unpkg.com/react@16.12.0/umd/react.development.js"></script>
+	<script src="https://unpkg.com/react-dom@16.12.0/umd/react-dom.development.js"></script>
+
+	<script type="text/javascript">
+		//get access to element in the DOM to use react
+		const rootElement = document.getElementById('root');
+		//we create the element and specify the properties in an object
+		const element = React.createElement(
+			'div',
+			{
+				className: 'container',
+				children: 'Hello World',
+				//if you have multiple children you may simply add them in array form (e.g. children: ["hello", "world", 'goodbye'])
+				//this has the benefit of allowing us to use react to create elements for the children
+				// React.createElement('span', null, "hello", "world")
+			}
+			// 'hello world', -> works the same as a using 'children in the object above'
+			// ', goodbye' -> adding more arguments will create more children
+		);
+		//console.log(element)
+		ReactDOM.render(element, rootElement);
+	</script>
 </body>
