--- a/05-fragments.html
+++ b/05-fragments.html
@@ -1,14 +1,21 @@
 <body>
-  <div id="root"></div>
-  <script src="https://unpkg.com/react@16.12.0/umd/react.development.js"></script>
-  <script src="https://unpkg.com/react-dom@16.12.0/umd/react-dom.development.js"></script>
-  <script src="https://unpkg.com/@babel/standalone@7.8.3/babel.js"></script>
-  <script type="text/babel">
-    const element = (
-      <>
-        <span>Hello</span> <span>World</span>
-      </>
-    )
-    ReactDOM.render(element, document.getElementById('root'))
-  </script>
+	<div id="root"></div>
+	<script src="https://unpkg.com/react@16.12.0/umd/react.development.js"></script>
+	<script src="https://unpkg.com/react-dom@16.12.0/umd/react-dom.development.js"></script>
+	<script src="https://unpkg.com/@babel/standalone@7.8.3/babel.js"></script>
+	<script type="text/babel">
+		//We can use react fragments to render items next to each other on the dom -> this would be difficult to do with createElement API and makes it easier to create tables which have a specific structure
+		const element = (
+			// we can use the open and closing angle brackets instead of a React.Fragment tag
+			<>
+				<span>Hello</span> <span>World</span>
+			</>
+		);
+		//Below is how we would accomplish the same thing using react Fragment -> note we even need to manually add in a space
+		// const element = React.createElement(React.Fragment, null, helloElement, " ",  worldElement)
+		// const helloElement = React.createElement('span' null, "Hello")
+		// const worldElement = React.createElement('span' null, "Hello")
+
+		ReactDOM.render(element, document.getElementById('root'));
+	</script>
 </body>
