--- a/10-styling.html
+++ b/10-styling.html
@@ -1,56 +1,59 @@
 <body>
-  <div id="root"></div>
-  <script src="https://unpkg.com/react@16.12.0/umd/react.development.js"></script>
-  <script src="https://unpkg.com/react-dom@16.12.0/umd/react-dom.development.js"></script>
-  <script src="https://unpkg.com/@babel/standalone@7.8.3/babel.js"></script>
-  <style>
-    .box {
-      border: 1px solid #333;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      text-align: center;
-    }
-    .box--large {
-      width: 270px;
-      height: 270px;
-    }
-    .box--medium {
-      width: 180px;
-      height: 180px;
-    }
-    .box--small {
-      width: 90px;
-      height: 90px;
-    }
-  </style>
-  <script type="text/babel">
-    function Box({style, size, className = '', ...rest}) {
-      const sizeClassName = size ? `box--${size}` : ''
-      return (
-        <div
-          className={`box ${className} ${sizeClassName}`}
-          style={{fontStyle: 'italic', ...style}}
-          {...rest}
-        />
-      )
-    }
+	<div id="root"></div>
+	<script src="https://unpkg.com/react@16.12.0/umd/react.development.js"></script>
+	<script src="https://unpkg.com/react-dom@16.12.0/umd/react-dom.development.js"></script>
+	<script src="https://unpkg.com/@babel/standalone@7.8.3/babel.js"></script>
+	<style>
+		.box {
+			border: 1px solid #333;
+			display: flex;
+			flex-direction: column;
+			justify-content: center;
+			text-align: center;
+		}
+		.box--large {
+			width: 270px;
+			height: 270px;
+		}
+		.box--medium {
+			width: 180px;
+			height: 180px;
+		}
+		.box--small {
+			width: 90px;
+			height: 90px;
+		}
+	</style>
+	<script type="text/babel">
+		//this function allows us to add our font style, box size and dynamically add class names to the boxes -- with other methods we would run into issues where each prop would override the previous -- so we could get an italicized box but it would not have the proper size etc.
+		function Box({ style, size, className = '', ...rest }) {
+			const sizeClassName = size ? `box--${size}` : '';
+			return (
+				<div
+					// because we don't care about the order we can use a string instead of an object
+					className={`box ${className} ${sizeClassName}`}
+					// the order in which we apply these styles matter -> so we use an object
+					style={{ fontStyle: 'italic', ...style }}
+					{...rest}
+				/>
+			);
+		}
+		const element = (
+			// note that we use camel case for the CSS properties
+			<div>
+				<Box size="small" style={{ backgroundColor: 'lightblue' }}>
+					small lightblue box
+				</Box>
+				<Box size="medium" style={{ backgroundColor: 'pink' }}>
+					medium pink box
+				</Box>
+				<Box size="large" style={{ backgroundColor: 'orange' }}>
+					large orange box
+				</Box>
+				<Box>sizeless box</Box>
+			</div>
+		);
 
-    const element = (
-      <div>
-        <Box size="small" style={{backgroundColor: 'lightblue'}}>
-          small lightblue box
-        </Box>
-        <Box size="medium" style={{backgroundColor: 'pink'}}>
-          medium pink box
-        </Box>
-        <Box size="large" style={{backgroundColor: 'orange'}}>
-          large orange box
-        </Box>
-        <Box>sizeless box</Box>
-      </div>
-    )
-
-    ReactDOM.render(element, document.getElementById('root'))
-  </script>
+		ReactDOM.render(element, document.getElementById('root'));
+	</script>
 </body>
