--- a/12-state.html
+++ b/12-state.html
@@ -1,23 +1,37 @@
 <body>
-  <div id="root"></div>
-  <script src="https://unpkg.com/react@16.12.0/umd/react.development.js"></script>
-  <script src="https://unpkg.com/react-dom@16.12.0/umd/react-dom.development.js"></script>
-  <script src="https://unpkg.com/@babel/standalone@7.8.3/babel.js"></script>
-  <script type="text/babel">
-    function Greeting() {
-      const [name, setName] = React.useState('')
-      const handleChange = event => setName(event.target.value)
-      return (
-        <div>
-          <form>
-            <label htmlFor="name">Name: </label>
-            <input onChange={handleChange} id="name" />
-          </form>
-          {name ? <strong>Hello {name}</strong> : 'Please type your name'}
-        </div>
-      )
-    }
+	<div id="root"></div>
+	<script src="https://unpkg.com/react@16.12.0/umd/react.development.js"></script>
+	<script src="https://unpkg.com/react-dom@16.12.0/umd/react-dom.development.js"></script>
+	<script src="https://unpkg.com/@babel/standalone@7.8.3/babel.js"></script>
+	<script type="text/babel">
+		function Greeting() {
+			// useState return hook an array -> originally retunrs '' but as the onChange fires, useState updates (ignoring '') and rendering the input
+			const [name, setName] = React.useState('');
+			//react keeps track of the order in which these are called, so we can use state more than once if needed
+			const [name2, setName2] = React.useState('');
+			// value in the useState() can be anything e.g. useState({}) -- objects, arrays, booleans, number etc.
 
-    ReactDOM.render(<Greeting />, document.getElementById('root'))
-  </script>
+			const handleChange = event => setName(event.target.value);
+			const handleChange2 = event => setName(event.target.value);
+			return (
+				<div>
+					<form>
+						<label htmlFor="name">Name: </label>
+						<input onChange={handleChange} id="name" />
+					</form>
+					{name ? <strong>Hello {name}</strong> : 'Please type your name'}
+
+					<div>
+						<form>
+							<label htmlFor="name">Name: </label>
+							<input onChange={handleChange2} id="name" />
+						</form>
+						{name2 ? <strong>Hello {name2}</strong> : 'Please type your name'}
+					</div>
+				</div>
+			);
+		}
+
+		ReactDOM.render(<Greeting />, document.getElementById('root'));
+	</script>
 </body>
