--- a/14-lazy-initialization.html
+++ b/14-lazy-initialization.html
@@ -1,31 +1,35 @@
 <body>
-  <div id="root"></div>
-  <script src="https://unpkg.com/react@16.12.0/umd/react.development.js"></script>
-  <script src="https://unpkg.com/react-dom@16.12.0/umd/react-dom.development.js"></script>
-  <script src="https://unpkg.com/@babel/standalone@7.8.3/babel.js"></script>
-  <script type="text/babel">
-    function Greeting() {
-      const [name, setName] = React.useState(
-        () => window.localStorage.getItem('name') || '',
-      )
+	<div id="root"></div>
+	<script src="https://unpkg.com/react@16.12.0/umd/react.development.js"></script>
+	<script src="https://unpkg.com/react-dom@16.12.0/umd/react-dom.development.js"></script>
+	<script src="https://unpkg.com/@babel/standalone@7.8.3/babel.js"></script>
+	<script type="text/babel">
+		function Greeting() {
+			const [name, setName] = React.useState(
+				// we only need to read into local storage for the initialization of our state -> with lazy initialization -- the function -- it will only read into local storage for the initial render of your component, despite the Greeting function firing every time onChange
+				() => {
+					console.log('hello'); // only renders when we reload
+					return window.localStorage.getItem('name') || '';
+				}
+			);
+			console.log('rendered'); // will render with each letter typed
+			React.useEffect(() => {
+				window.localStorage.setItem('name', name);
+			});
 
-      React.useEffect(() => {
-        window.localStorage.setItem('name', name)
-      })
+			const handleChange = event => setName(event.target.value);
 
-      const handleChange = event => setName(event.target.value)
+			return (
+				<div>
+					<form>
+						<label htmlFor="name">Name: </label>
+						<input value={name} onChange={handleChange} id="name" />
+					</form>
+					{name ? <strong>Hello {name}</strong> : 'Please type your name'}
+				</div>
+			);
+		}
 
-      return (
-        <div>
-          <form>
-            <label htmlFor="name">Name: </label>
-            <input value={name} onChange={handleChange} id="name" />
-          </form>
-          {name ? <strong>Hello {name}</strong> : 'Please type your name'}
-        </div>
-      )
-    }
-
-    ReactDOM.render(<Greeting />, document.getElementById('root'))
-  </script>
+		ReactDOM.render(<Greeting />, document.getElementById('root'));
+	</script>
 </body>
